{
  "@@locale": "zh_TW",
  "camping_name": "名稱",
  "camping_address": "地址",
  "camping_phone_number": "電話",
  "camping_website": "網站",
  "compliant_relevant_regulations": "符合相關法規",
  "violation_relevant_regulations": "違反相關法規",
  "search_camping_site_hint": "輸入名稱或地址搜尋",
  "camping_site_list": "露營區列表",
  "resource_declaration": "資料來源聲明",
  "settings": "設定",
  "weather_data_source_is": "天氣資料及天氣圖案來源為",
  "camping_data_source_is": "露營區資料來源為政府資料開放平臺，目前使用日期版本為",
  "date": "日期",
  "temperature_max": "最高溫",
  "temperature_min": "最低溫",
  "pricipitation_probability": "降雨機率",
  "today": "今日",
  "weather_forecast_warning": "無法取得天氣資訊",
  "weather_forecast_is_empty": "沒有天氣資訊",
  "iday_pictograms_1": "晴朗，無雲",
  "iday_pictograms_2": "晴朗，少量雲",
  "iday_pictograms_3": "局部多雲",
  "iday_pictograms_4": "陰天",
  "iday_pictograms_5": "有霧",
  "iday_pictograms_6": "陰天，有雨",
  "iday_pictograms_7": "局部多雲，有零星陣雨",
  "iday_pictograms_8": "陣雨，可能有雷暴",
  "iday_pictograms_9": "陰天，有雪",
  "iday_pictograms_10": "局部多雲，有陣雪",
  "iday_pictograms_11": "多雲，雨雪交加",
  "iday_pictograms_12": "陰天，小雨",
  "iday_pictograms_13": "陰天，小雪",
  "iday_pictograms_14": "多雲，有雨",
  "iday_pictograms_15": "多雲，有雪",
  "iday_pictograms_16": "多雲，小雨",
  "iday_pictograms_17": "多雲，小雪",
  "stargazing_condition_assessment": "觀星條件評估",
  "nightsky_brightness_actual": "實際的夜空亮度",
  "nightsky_brightness_clearsky": "理想條件下的夜空亮度",
  "moonlight_actual": "實際的月光亮度",
  "moonlight_clearsky": "理想條件下的月光亮度",
  "totalcloudcover": "雲層覆蓋總量",
  "fogProbability": "霧的機率",
  "stargazing_condition_calculation_formula": "觀星條件計算公式",
  "cloud_impact": "雲層影響",
  "moonlight_impact": "月光影響",
  "night_sky_impact": "夜空亮度影響",
  "evaluation_is_for_reference_only": "評估僅供參考"
}
